blog/k8s/comments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-deployment
  labels:
    app: comments
spec:
  selector:
    matchLabels:
      app: comments
  replicas: 1
  strategy:
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
        - name: comments
          image: kodega2016/blog-comments
          imagePullPolicy: Always
          ports:
            - containerPort: 4001
              name: comments
