blog/k8s/posts-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-deployment
  labels:
    app: posts
spec:
  selector:
    matchLabels:
      app: posts
  replicas: 1
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
        - name: posts
          image: kodega2016/blog-posts
          imagePullPolicy: Always
          ports:
            - containerPort: 4000
              name: posts
