blog/k8s/query-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-deployment
  labels:
    app: query
spec:
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
        - name: query
          image: kodega2016/blog-query
          imagePullPolicy: Always
          ports:
            - containerPort: 4002
              name: query
