blog/k8s/posts-node-port-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-nodeport-service
spec:
  selector:
    app: posts
  type: NodePort
  ports:
    - name: posts-nodeport-service
      protocol: TCP
      port: 80
      targetPort: 4000
      nodePort: 30001
